# search-engine-with-rag-and-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_mcp_server.sh  test_client.py
docs/: claude_desktop_setup.md  env_template.md
src/: __init__.py
src/core/: __init__.py  agent.py  llm_utils.py  main.py  mcp_server.py  rag.py  search.py
src/utils/: env.py  help_texts.py  logger.py
tests/: conftest.py
tests/unit/: test_example.py
